Simple list and create functionality added for exercise. Should be working on first-time entry to app. First time on device test functional as well. Ui is as simple as possible. Basic validation present, but no error messages yet.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -46,6 +46,10 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.usabilityapp.MainActivity" />
         </activity>
+        <activity
+            android:name="com.example.usabilityapp.CreateExerciseActivity"
+            android:label="@string/title_activity_create_exercise" >
+        </activity>
     </application>
 
 </manifest>
