Reviewing workouts is bueno... currently working to resolve deleteable exercises issue.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -58,6 +58,10 @@
             android:name="com.example.usabilityapp.CreateWorkoutActivity"
             android:label="@string/title_activity_create_workout" >
         </activity>
+        <activity
+            android:name="com.example.usabilityapp.ReviewWorkoutActivity"
+            android:label="@string/title_activity_review_workout">
+        </activity>
     </application>
 
 </manifest>
